<resources>
    <string name="app_name">bjyxApp</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="text">Happy Birthday!</string>
    <string name="from">Yours bxg</string>
    <string name="label_input">input temperature</string>
    <string name="button_convert">Convert</string>
    <string name="tv_title">Temperature convert</string>
    <string name="tv_result" translatable="false" />
    <string name="convert_c2f">Celsius to Fahrenheit</string>
    <string name="convert_f2c">Fahrenheit to Celsius</string>
    <string name="fahren" translatable="false">℉</string>
    <string name="to_fahren">to_fahren</string>
    <string name="to_celsius">to_celsius</string>
    <string name="msg_error_input">Please enter a valid temperature value</string>
    <string name="celsius" translatable="false">℃</string>


    <string name="inputrmb">Please enter a valid value</string>
    <string name="convert_r2d">RMB to Dollar</string>
    <string name="convert_r2e">RMB to Euro</string>
    <string name="convert_r2w">RMB to Won</string>
    <string name="config_lable">Config</string>
    <string name="msg_error_input2">Please enter a valid value</string>
    <string name="rate_menu_lable" translatable="false">Setting</string>

    <string name="hello_world" translatable="false">欢迎使用！</string>
    <string name="lab_approve" translatable="false">赞成</string>
    <string name="lab_object" translatable="false">反对</string>
    <string name="lab_abstain" translatable="false">弃权</string>
    <string name="btn_reset_label" translatable="false">Reset</string>
    <string name="btn3_label" translatable="false">+3 points</string>
    <string name="btn2_label" translatable="false">+2 points</string>
    <string name="btn1_label" translatable="false">+1 point</string>
    <string name="tname_label">TeamA</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
