<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConvertActivity">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/tv_title"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tv_result"
        android:textSize="45sp" />


    <EditText
        android:id="@+id/value_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/label_input"
        android:inputType="textPersonName"
        android:textSize="40sp" />


    <Button
        android:id="@+id/button_c2f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/convert_c2f"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_f2c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/convert_f2c"
        android:textSize="15sp" />


</LinearLayout>