<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RateActivity">

    <TextView
        android:id="@+id/t_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Rate Convert"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/inputrmb"
        android:textSize="30sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/showOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/r2dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_r2d"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/r2euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_r2e"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/r2won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_r2w"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/config_lable"
        android:onClick="openOne"/>


</LinearLayout>